--- a/src/GUI/style.css
+++ b/src/GUI/style.css
@@ -57,6 +57,11 @@ window button {
     /* border: 1px solid red; */
     color: white;
 }
+.right_panel .terminal{
+    background-color: rgb(38, 38, 47);
+    border-radius: 10px;
+    /* color: white; */
+}
 .right_panel .terminal text{
     background-color: rgb(38, 38, 47);
     border-radius: 10px;
