--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -9,33 +9,6 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment2">
-    <property name="lower">1</property>
-    <property name="upper">1000000</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
-  </object>
-  <object class="GtkAdjustment" id="adjustment3">
-    <property name="lower">1</property>
-    <property name="upper">1000000</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
-  </object>
-  <object class="GtkAdjustment" id="adjustment4">
-    <property name="lower">1</property>
-    <property name="upper">1000000</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
-  </object>
-  <object class="GtkFileFilter" id="filefilter1">
-    <mime-types>
-      <mime-type>jpg</mime-type>
-      <mime-type>bmp</mime-type>
-      <mime-type>jpeg</mime-type>
-      <mime-type>png</mime-type>
-    </mime-types>
-  </object>
-  <object class="GtkTextBuffer" id="textbuffer1"/>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
     <signal name="destroy" handler="quit" swapped="no"/>
@@ -390,6 +363,7 @@ Network</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <signal name="clicked" handler="show_page" object="settings" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -927,6 +901,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="max_length">128</property>
+                        <property name="text" translatable="yes">1000</property>
                         <property name="input_purpose">number</property>
                         <property name="adjustment">adjustment2</property>
                         <property name="climb_rate">0.13</property>
@@ -967,7 +942,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="max_length">128</property>
-                        <property name="text" translatable="yes">0</property>
+                        <property name="text" translatable="yes">1</property>
                         <property name="input_purpose">number</property>
                         <property name="adjustment">adjustment3</property>
                         <property name="climb_rate">0.13</property>
@@ -1007,6 +982,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                       <object class="GtkSpinButton" id="node_input">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="text" translatable="yes">30</property>
                         <property name="input_purpose">number</property>
                         <property name="adjustment">adjustment4</property>
                         <property name="climb_rate">0.13</property>
@@ -1046,6 +1022,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <signal name="clicked" handler="reset_nn" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -1108,7 +1085,97 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
             <property name="position">2</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkBox" id="settings">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
+            <property name="spacing">12</property>
+            <child>
+              <object class="GtkBox">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <property name="spacing">9</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="halign">start</property>
+                    <property name="label" translatable="yes">Settings</property>
+                    <property name="ellipsize">start</property>
+                    <attributes>
+                      <attribute name="font-desc" value="Sans Bold 10"/>
+                      <attribute name="scale" value="2"/>
+                      <attribute name="gravity" value="east"/>
+                    </attributes>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton">
+                    <property name="label" translatable="yes">Back</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="halign">start</property>
+                    <signal name="clicked" handler="show_page" object="main_page" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <style>
+              <class name="right_panel"/>
+            </style>
+          </object>
+          <packing>
+            <property name="name">page3</property>
+            <property name="title" translatable="yes">page3</property>
+            <property name="position">3</property>
+          </packing>
+        </child>
       </object>
     </child>
   </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="lower">1</property>
+    <property name="upper">1000000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment3">
+    <property name="lower">1</property>
+    <property name="upper">1000000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment4">
+    <property name="lower">1</property>
+    <property name="upper">1000000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkFileFilter" id="filefilter1">
+    <mime-types>
+      <mime-type>jpg</mime-type>
+      <mime-type>bmp</mime-type>
+      <mime-type>jpeg</mime-type>
+      <mime-type>png</mime-type>
+    </mime-types>
+  </object>
+  <object class="GtkTextBuffer" id="textbuffer1"/>
 </interface>
