--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -552,6 +552,26 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkTextView" id="terminal_text1">
+                        <property name="visible">True</property>
+                        <property name="can-focus">True</property>
+                        <property name="hexpand">True</property>
+                        <property name="vexpand">True</property>
+                        <property name="editable">False</property>
+                        <property name="wrap-mode">word</property>
+                        <property name="buffer">textbuffer1</property>
+                        <style>
+                          <class name="terminal"/>
+                        </style>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="pack-type">end</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkBox">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
@@ -585,7 +605,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="pack-type">end</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </object>
