--- a/src/GUI/style.css
+++ b/src/GUI/style.css
@@ -63,6 +63,25 @@ window button {
     /* border: 1px solid red; */
     color: white;
 }
+
+.right_panel .stack-switcher {
+    background-color: rgb(38, 38, 47);
+    /* border-radius: 10px; */
+    border: 1px solid #ff8800;
+    color: white;
+}
+.right_panel .stack-switcher button {
+    background-color: #ff8800;
+    border-radius: 0px;
+    /* border: 1px solid red; */
+    color: white;
+}
+.right_panel .stack-switcher button .toogle {
+    background-color: rgb(51, 51, 51);
+    border: 1px solid #794000;
+    background:rgb(189, 120, 10);
+}
+
 .right_panel .terminal{
     background-color: rgb(38, 38, 47);
     border-radius: 10px;
