--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -525,34 +525,20 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="halign">start</property>
-                        <property name="label" translatable="yes">Last opened files</property>
-                        <attributes>
-                          <attribute name="font-desc" value="Sans Bold 10"/>
-                          <attribute name="scale" value="1"/>
-                        </attributes>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">5</property>
-                      </packing>
-                    </child>
-                    <child type="center">
-                      <object class="GtkBox" id="box_recents">
+                      <object class="GtkBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="orientation">vertical</property>
                         <child>
-                          <object class="GtkButton">
-                            <property name="label" translatable="yes">button</property>
+                          <object class="GtkLabel">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="halign">center</property>
+                            <property name="can_focus">False</property>
+                            <property name="halign">start</property>
+                            <property name="label" translatable="yes">Last opened sudoku</property>
+                            <attributes>
+                              <attribute name="font-desc" value="Sans Bold Italic 10"/>
+                              <attribute name="scale" value="1"/>
+                            </attributes>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -561,11 +547,17 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton">
-                            <property name="label" translatable="yes">button</property>
+                          <object class="GtkBox" id="box_recents">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="halign">start</property>
+                            <property name="orientation">vertical</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <style>
+                              <class name="last_files"/>
+                            </style>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -573,17 +565,8 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                             <property name="position">1</property>
                           </packing>
                         </child>
-                        <child>
-                          <placeholder/>
-                        </child>
-                        <child>
-                          <placeholder/>
-                        </child>
-                        <child>
-                          <placeholder/>
-                        </child>
                         <style>
-                          <class name="last_files"/>
+                          <class name="last_items_category"/>
                         </style>
                       </object>
                       <packing>
