--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -744,6 +744,18 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkSeparator">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="padding">15</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkGrid" id="grid_result">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
@@ -1731,7 +1743,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
